crates/biome_js_parser/tests/js_test_suite/error/glimmer/glimmer_lookalike_div.gjs
// Test that JSX (<div>) is forbidden in .gjs files
// Only <template> tags are allowed, regular JSX is not
const x = <div>content</div>;
